--- a/01 Основы реляционной модели и SQL/03 Нарушения ПДД, корректировка.md
+++ b/01 Основы реляционной модели и SQL/03 Нарушения ПДД, корректировка.md
@@ -84,7 +84,8 @@ WHERE (fine.name, fine.number_plate, fine.violatation) = (query_in.name, query_i
 ```
 ###### Задание 5:
 Необходимо:
-- в таблицу fine занести дату оплаты соответствующего штрафа из таблицы payment; - уменьшить начисленный штраф в таблице fine в два раза (только для новых штрафов, дата оплаты которых занесена в payment) , если оплата произведена не более, чем за 20 дней со дня нарушения.
+- в таблицу fine занести дату оплаты соответствующего штрафа из таблицы payment; 
+- уменьшить начисленный штраф в таблице fine в два раза (только для новых штрафов, дата оплаты которых занесена в payment) , если оплата произведена не более, чем за 20 дней со дня нарушения.
 ```sql
 UPDATE fine f,
        payment p
